--- a/maze.cabal
+++ b/maze.cabal
@@ -12,7 +12,7 @@ cabal-version:       >=1.10
 extra-source-files:  README.md
 
 executable maze
-  ghc-options:         -Wall -threaded -O2 -rtsopts
+  ghc-options:         -Wall -O2 -rtsopts
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
@@ -23,3 +23,4 @@ executable maze
                      , containers
                      , random
                      , mtl
+                     , optparse-generic
